@@ -4,6 +4,8 @@ Version 0.3.0~dev
 	* Add support for reloading configuration on SIGUSR2, closes: #1643.
 	* Add support for subcmp ffmpeg option, closes: #2176.
 	* Fix a typo in post-command execution.
+	* Fix crash trying to start main command, subprocess.Popen needs to be
+	  wrapped in try/except due to a bug in subprocess, closes: #2239.
 
 Version 0.2.5 Released on 2009/07/17
 
